enabled Auth with CORS and did job refactoring