@@ -2,37 +2,20 @@ package uk.gov.hmcts.cp.cdk.batch.tasklet;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.ArgumentMatchers.startsWith;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.cp.cdk.batch.BatchKeys.CTX_CASE_ID_KEY;
-import static uk.gov.hmcts.cp.cdk.batch.BatchKeys.CTX_DOC_ID_KEY;
-import static uk.gov.hmcts.cp.cdk.batch.BatchKeys.CTX_MATERIAL_ID_KEY;
-import static uk.gov.hmcts.cp.cdk.batch.BatchKeys.CTX_UPLOAD_VERIFIED_KEY;
+import static uk.gov.hmcts.cp.cdk.batch.support.BatchKeys.CTX_CASE_ID_KEY;
+import static uk.gov.hmcts.cp.cdk.batch.support.BatchKeys.CTX_DOC_ID_KEY;
+import static uk.gov.hmcts.cp.cdk.batch.support.BatchKeys.CTX_MATERIAL_ID_KEY;
+import static uk.gov.hmcts.cp.cdk.batch.support.BatchKeys.CTX_UPLOAD_VERIFIED_KEY;
 
-import uk.gov.hmcts.cp.cdk.batch.QueryResolver;
-import uk.gov.hmcts.cp.cdk.domain.Query;
-import uk.gov.hmcts.cp.cdk.domain.QueryDefinitionLatest;
-import uk.gov.hmcts.cp.cdk.repo.DocumentIdResolver;
-import uk.gov.hmcts.cp.cdk.repo.QueryDefinitionLatestRepository;
-import uk.gov.hmcts.cp.openapi.api.DocumentInformationSummarisedApi;
-import uk.gov.hmcts.cp.openapi.model.AnswerUserQueryRequest;
-import uk.gov.hmcts.cp.openapi.model.UserQueryAnswerReturnedSuccessfully;
-
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -41,10 +24,11 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.batch.core.job.JobExecution;
+import org.springframework.batch.core.job.parameters.JobParameters;
+import org.springframework.batch.core.job.parameters.JobParametersBuilder;
 import org.springframework.batch.core.scope.context.ChunkContext;
 import org.springframework.batch.core.step.StepContribution;
 import org.springframework.batch.core.step.StepExecution;
@@ -54,7 +38,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
-import org.springframework.jdbc.core.namedparam.SqlParameterSource;
 import org.springframework.retry.backoff.NoBackOffPolicy;
 import org.springframework.retry.policy.SimpleRetryPolicy;
 import org.springframework.retry.support.RetryTemplate;
@@ -63,327 +46,353 @@ import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.support.SimpleTransactionStatus;
 
-@DisplayName("GenerateAnswersTasklet tests")
+import uk.gov.hmcts.cp.cdk.batch.support.QueryResolver;
+import uk.gov.hmcts.cp.cdk.domain.Query;
+import uk.gov.hmcts.cp.cdk.domain.QueryDefinitionLatest;
+import uk.gov.hmcts.cp.cdk.repo.QueryDefinitionLatestRepository;
+import uk.gov.hmcts.cp.openapi.api.DocumentInformationSummarisedApi;
+import uk.gov.hmcts.cp.openapi.model.AnswerUserQueryRequest;
+import uk.gov.hmcts.cp.openapi.model.MetadataFilter;
+import uk.gov.hmcts.cp.openapi.model.UserQueryAnswerReturnedSuccessfully;
+
 @ExtendWith(MockitoExtension.class)
 class GenerateAnswersTaskletTest {
 
     @Mock
     private QueryResolver queryResolver;
+
     @Mock
     private QueryDefinitionLatestRepository qdlRepo;
+
     @Mock
     private NamedParameterJdbcTemplate jdbc;
+
     @Mock
     private DocumentInformationSummarisedApi documentInformationSummarisedApi;
-    @Mock
-    private DocumentIdResolver documentIdResolver;
-
-    private final PlatformTransactionManager txManager = new NoopTxManager();
-    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Mock
     private StepContribution contribution;
+
     @Mock
     private ChunkContext chunkContext;
+
     @Mock
     private StepExecution stepExecution;
 
+    @Mock
+    private JobExecution jobExecution;
+
+    private final PlatformTransactionManager txManager = new NoopTxManager();
+
+    private ObjectMapper objectMapper;
     private RetryTemplate retryTemplate;
+    private GenerateAnswersTasklet tasklet;
 
-    static class NoopTxManager implements PlatformTransactionManager {
-        @Override
-        public TransactionStatus getTransaction(TransactionDefinition definition) {
-            return new SimpleTransactionStatus();
-        }
-
-        @Override
-        public void commit(TransactionStatus status) {
-        }
-
-        @Override
-        public void rollback(TransactionStatus status) {
-        }
-    }
-
-    private GenerateAnswersTasklet newTasklet() {
-        return new GenerateAnswersTasklet(
-                queryResolver, qdlRepo, jdbc, txManager, objectMapper, documentInformationSummarisedApi, retryTemplate, documentIdResolver);
-    }
+    private ExecutionContext stepCtx;
+    private ExecutionContext jobCtx;
 
     @BeforeEach
-    void setUpRetry() {
-        retryTemplate = new RetryTemplate();
-        retryTemplate.setRetryPolicy(new SimpleRetryPolicy(1)); // one attempt
-        retryTemplate.setBackOffPolicy(new NoBackOffPolicy());
-    }
+    void setUp() {
+        objectMapper = new ObjectMapper();
 
-    @Test
-    @DisplayName("Processes multiple queries: reserves versions, marks IN_PROGRESS, calls RAG, upserts answers, marks DONE")
-    void processesMultipleQueriesWithBatchWrites() throws Exception {
-        final UUID caseId = UUID.randomUUID();
-        final UUID docId = UUID.randomUUID();
-        ExecutionContext stepCtx = new ExecutionContext();
-        stepCtx.putString(CTX_CASE_ID_KEY, caseId.toString());
-        stepCtx.putString(CTX_DOC_ID_KEY, docId.toString());
+        retryTemplate = new RetryTemplate();
+        final SimpleRetryPolicy retryPolicy = new SimpleRetryPolicy(1); // single attempt
+        retryTemplate.setRetryPolicy(retryPolicy);
+        retryTemplate.setBackOffPolicy(new NoBackOffPolicy());
+
+        tasklet = new GenerateAnswersTasklet(
+                queryResolver,
+                qdlRepo,
+                jdbc,
+                txManager,
+                objectMapper,
+                documentInformationSummarisedApi,
+                retryTemplate
+        );
+
+        stepCtx = new ExecutionContext();
+        jobCtx = new ExecutionContext();
 
         when(contribution.getStepExecution()).thenReturn(stepExecution);
         when(stepExecution.getExecutionContext()).thenReturn(stepCtx);
-        when(stepExecution.getJobExecution()).thenReturn(mock(JobExecution.class));
-        ExecutionContext jobCtx = new ExecutionContext();
-        when(stepExecution.getJobExecution().getExecutionContext()).thenReturn(jobCtx);
-        jobCtx.put(CTX_UPLOAD_VERIFIED_KEY + ":" + docId, true);
+        when(stepExecution.getJobExecution()).thenReturn(jobExecution);
+        when(jobExecution.getExecutionContext()).thenReturn(jobCtx);
+    }
 
-        // no override
-        lenient().when(documentIdResolver.resolveExistingDocId(any(), any())).thenReturn(Optional.empty());
+    @Test
+    @DisplayName("Missing caseId/docId -> FINISHED with no work")
+    void missingIdsSkips() {
+        final RepeatStatus status = tasklet.execute(contribution, chunkContext);
+        assertThat(status).isEqualTo(RepeatStatus.FINISHED);
+    }
 
-        UUID q1 = UUID.randomUUID();
-        UUID q2 = UUID.randomUUID();
-        Query query1 = mock(Query.class);
-        Query query2 = mock(Query.class);
-        when(query1.getQueryId()).thenReturn(q1);
-        when(query2.getQueryId()).thenReturn(q2);
-        when(queryResolver.resolve()).thenReturn(Arrays.asList(query1, query2));
+    @Test
+    @DisplayName("Not verified (job flag false/missing) -> FINISHED with no work")
+    void notVerifiedSkips() {
+        final UUID caseId = UUID.randomUUID();
+        final UUID docId = UUID.randomUUID();
 
-        var def1 = mock(QueryDefinitionLatest.class);
-        var def2 = mock(QueryDefinitionLatest.class);
-        when(def1.getQueryPrompt()).thenReturn("prompt-1");
-        when(def1.getUserQuery()).thenReturn("user-query-1");
-        when(def2.getQueryPrompt()).thenReturn("prompt-2");
-        when(def2.getUserQuery()).thenReturn("user-query-2");
-        when(qdlRepo.findByQueryId(q1)).thenReturn(Optional.of(def1));
-        when(qdlRepo.findByQueryId(q2)).thenReturn(Optional.of(def2));
+        stepCtx.putString(CTX_CASE_ID_KEY, caseId.toString());
+        stepCtx.putString(CTX_DOC_ID_KEY, docId.toString());
+        // No verified flag in job context -> skip
 
+        final RepeatStatus status = tasklet.execute(contribution, chunkContext);
+        assertThat(status).isEqualTo(RepeatStatus.FINISHED);
+    }
+
+    @Test
+    @DisplayName("Eligible NEW/FAILED -> mark IN_PROGRESS, call API, upsert answer, mark DONE")
+    void eligibleHappyPath() {
+        final UUID caseId = UUID.randomUUID();
+        final UUID docId = UUID.randomUUID();
+        final UUID queryId = UUID.randomUUID();
+
+        stepCtx.putString(CTX_CASE_ID_KEY, caseId.toString());
+        stepCtx.putString(CTX_DOC_ID_KEY, docId.toString());
+        stepCtx.putString(CTX_MATERIAL_ID_KEY, UUID.randomUUID().toString());
+
+        final String verifiedKey = CTX_UPLOAD_VERIFIED_KEY + ":" + docId;
+        jobCtx.put(verifiedKey, true);
+
+        final Query q = new Query();
+        q.setQueryId(queryId);
+        q.setLabel("Q1");
+        when(queryResolver.resolve()).thenReturn(List.of(q));
+
+        // Eligible reservation from DB (NEW/FAILED)
         when(jdbc.query(
-                startsWith("SELECT version FROM answer_reservations"),
-                any(SqlParameterSource.class),
-                ArgumentMatchers.<RowMapper<Integer>>any()
-        )).thenAnswer(inv -> {
-            SqlParameterSource p = inv.getArgument(1);
-            UUID queryId = (UUID) p.getValue("query_id");
-            if (q1.equals(queryId)) return Collections.<Integer>emptyList();
-            if (q2.equals(queryId)) return Collections.singletonList(7);
-            return Collections.<Integer>emptyList();
-        });
+                eq("SELECT query_id FROM answer_reservations  WHERE case_id=:case_id AND doc_id=:doc_id AND status IN ('NEW','FAILED')"),
+                any(MapSqlParameterSource.class),
+                anyUuidRowMapper()
+        )).thenReturn(List.of(queryId));
 
-        when(jdbc.queryForObject(
-                startsWith("SELECT get_or_create_answer_version"),
-                any(SqlParameterSource.class),
-                eq(Integer.class)
-        )).thenReturn(3);
+        // Version exists, and IN_PROGRESS update succeeds
+        when(jdbc.query(
+                eq("SELECT version FROM answer_reservations  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource.class),
+                anyIntRowMapper()
+        )).thenReturn(List.of(1));
 
         when(jdbc.update(
-                startsWith("UPDATE answer_reservations SET status='IN_PROGRESS'"),
-                any(SqlParameterSource.class)
+                eq("UPDATE answer_reservations    SET status='IN_PROGRESS', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id    AND status IN ('NEW','FAILED')"),
+                any(MapSqlParameterSource.class)
         )).thenReturn(1);
 
-        var resp1 = new UserQueryAnswerReturnedSuccessfully()
-                .userQuery("user-query-1")
-                .queryPrompt("prompt-1")
-                .llmResponse("ans-" + q1)
-                .chunkedEntries(List.of(Map.of("id", 1)));
-        var resp2 = new UserQueryAnswerReturnedSuccessfully()
-                .userQuery("user-query-2")
-                .queryPrompt("prompt-2")
-                .llmResponse("ans-" + q2)
-                .chunkedEntries(List.of(Map.of("id", 2)));
+        // Latest definition
+        final QueryDefinitionLatest def = new QueryDefinitionLatest();
+        def.setQueryId(queryId);
+        def.setUserQuery("user-query");
+        def.setQueryPrompt("prompt");
+        when(qdlRepo.findByQueryId(queryId)).thenReturn(Optional.of(def));
 
-        when(documentInformationSummarisedApi.answerUserQuery(argThat(req ->
-                req instanceof AnswerUserQueryRequest r &&
-                        "user-query-1".equals(r.getUserQuery()) &&
-                        "prompt-1".equals(r.getQueryPrompt())
-        ))).thenReturn(ResponseEntity.ok(resp1));
+        // API success
+        final UserQueryAnswerReturnedSuccessfully rag =
+                new UserQueryAnswerReturnedSuccessfully()
+                        .llmResponse("answer-1")
+                        .chunkedEntries(new ArrayList<>());
+        when(documentInformationSummarisedApi.answerUserQuery(any(AnswerUserQueryRequest.class)))
+                .thenReturn(ResponseEntity.ok(rag));
 
-        when(documentInformationSummarisedApi.answerUserQuery(argThat(req ->
-                req instanceof AnswerUserQueryRequest r &&
-                        "user-query-2".equals(r.getUserQuery()) &&
-                        "prompt-2".equals(r.getQueryPrompt())
-        ))).thenReturn(ResponseEntity.ok(resp2));
+        // Batch updates for UPSERT and DONE
+        when(jdbc.batchUpdate(
+                eq("INSERT INTO answers(case_id, query_id, version, created_at, answer, llm_input, doc_id) VALUES (:case_id, :query_id, :version, NOW(), :answer, :llm_input, :doc_id) ON CONFLICT (case_id, query_id, version) DO UPDATE SET   answer = EXCLUDED.answer,   llm_input = EXCLUDED.llm_input,   doc_id = EXCLUDED.doc_id,   created_at = EXCLUDED.created_at"),
+                any(MapSqlParameterSource[].class)
+        )).thenReturn(new int[]{1});
 
-        ArgumentCaptor<MapSqlParameterSource[]> answersBatchCaptor = ArgumentCaptor.forClass(MapSqlParameterSource[].class);
-        when(jdbc.batchUpdate(startsWith("INSERT INTO answers"), answersBatchCaptor.capture()))
-                .thenReturn(new int[]{1, 1});
+        when(jdbc.batchUpdate(
+                eq("UPDATE answer_reservations SET status='DONE', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource[].class)
+        )).thenReturn(new int[]{1});
 
-        ArgumentCaptor<MapSqlParameterSource[]> doneBatchCaptor = ArgumentCaptor.forClass(MapSqlParameterSource[].class);
-        when(jdbc.batchUpdate(startsWith("UPDATE answer_reservations SET status='DONE'"), doneBatchCaptor.capture()))
-                .thenReturn(new int[]{1, 1});
-
-        RepeatStatus status = newTasklet().execute(contribution, chunkContext);
+        final RepeatStatus status = tasklet.execute(contribution, chunkContext);
         assertThat(status).isEqualTo(RepeatStatus.FINISHED);
 
-        verify(jdbc, times(2)).query(
-                startsWith("SELECT version FROM answer_reservations"),
-                any(SqlParameterSource.class),
-                ArgumentMatchers.<RowMapper<Integer>>any()
-        );
-        verify(jdbc, times(1)).queryForObject(
-                startsWith("SELECT get_or_create_answer_version"),
-                any(SqlParameterSource.class),
-                eq(Integer.class)
-        );
-        verify(jdbc, times(2)).update(
-                startsWith("UPDATE answer_reservations SET status='IN_PROGRESS'"),
-                any(SqlParameterSource.class)
+        // Verify API called with metadata filter on document_id
+        final ArgumentCaptor<AnswerUserQueryRequest> reqCap = ArgumentCaptor.forClass(AnswerUserQueryRequest.class);
+        verify(documentInformationSummarisedApi).answerUserQuery(reqCap.capture());
+        final AnswerUserQueryRequest sent = reqCap.getValue();
+        final List<MetadataFilter> filters = sent.getMetadataFilter();
+        assertThat(filters).isNotNull();
+        assertThat(filters).anySatisfy(f ->
+                assertThat(Map.entry(f.getKey(), f.getValue()))
+                        .isEqualTo(Map.entry("document_id", docId.toString()))
         );
 
-        MapSqlParameterSource[] answersBatch = answersBatchCaptor.getValue();
-        MapSqlParameterSource[] doneBatch = doneBatchCaptor.getValue();
-        assertThat(answersBatch).hasSize(2);
-        assertThat(doneBatch).hasSize(2);
-
-        Set<UUID> seenQueryIds = new HashSet<>();
-        Set<String> seenAnswers = new HashSet<>();
-        for (MapSqlParameterSource m : answersBatch) {
-            Map<String, Object> vals = m.getValues();
-            assertThat(vals.get("case_id")).isEqualTo(caseId);
-            assertThat(vals.get("doc_id")).isEqualTo(docId);
-            assertThat(vals.get("version")).isInstanceOf(Integer.class);
-
-            String answer = (String) vals.get("answer");
-            assertThat(answer).startsWith("ans-");
-            seenAnswers.add(answer);
-
-            String llmInput = (String) vals.get("llm_input");
-            assertThat(llmInput).contains("provenanceChunksSample");
-
-            seenQueryIds.add((UUID) vals.get("query_id"));
-        }
-        assertThat(seenQueryIds).containsExactlyInAnyOrder(q1, q2);
-        assertThat(seenAnswers).containsExactlyInAnyOrder("ans-" + q1, "ans-" + q2);
-
-        Set<UUID> doneQueryIds = new HashSet<>();
-        for (MapSqlParameterSource m : doneBatch) {
-            Map<String, Object> vals = m.getValues();
-            assertThat(vals.get("case_id")).isEqualTo(caseId);
-            assertThat(vals.get("doc_id")).isEqualTo(docId);
-            doneQueryIds.add((UUID) vals.get("query_id"));
-        }
-        assertThat(doneQueryIds).containsExactlyInAnyOrder(q1, q2);
+        // Verify both batch updates were invoked once
+        verify(jdbc, times(1)).batchUpdate(
+                eq("INSERT INTO answers(case_id, query_id, version, created_at, answer, llm_input, doc_id) VALUES (:case_id, :query_id, :version, NOW(), :answer, :llm_input, :doc_id) ON CONFLICT (case_id, query_id, version) DO UPDATE SET   answer = EXCLUDED.answer,   llm_input = EXCLUDED.llm_input,   doc_id = EXCLUDED.doc_id,   created_at = EXCLUDED.created_at"),
+                any(MapSqlParameterSource[].class)
+        );
+        verify(jdbc, times(1)).batchUpdate(
+                eq("UPDATE answer_reservations SET status='DONE', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource[].class)
+        );
     }
 
     @Test
-    @DisplayName("Returns FINISHED and does nothing when caseId missing")
-    void returnsFinishedWhenNoContext() throws Exception {
-        ExecutionContext stepCtx = new ExecutionContext();
-        when(contribution.getStepExecution()).thenReturn(stepExecution);
-        when(stepExecution.getExecutionContext()).thenReturn(stepCtx);
-        when(stepExecution.getJobExecution()).thenReturn(mock(JobExecution.class));
-        ExecutionContext jobCtx = new ExecutionContext();
-        when(stepExecution.getJobExecution().getExecutionContext()).thenReturn(jobCtx);
-
-        RepeatStatus status = newTasklet().execute(contribution, chunkContext);
-
-        assertThat(status).isEqualTo(RepeatStatus.FINISHED);
-        verifyNoInteractions(jdbc, queryResolver, qdlRepo, documentInformationSummarisedApi, documentIdResolver);
-    }
-
-    @Test
-    @DisplayName("Returns FINISHED when no queries to run")
-    void returnsFinishedWhenNoQueries() throws Exception {
+    @DisplayName("API failure -> reservation marked FAILED (no answer UPSERT)")
+    void apiFailureMarksFailed() {
         final UUID caseId = UUID.randomUUID();
         final UUID docId = UUID.randomUUID();
-        ExecutionContext stepCtx = new ExecutionContext();
+        final UUID queryId = UUID.randomUUID();
+
         stepCtx.putString(CTX_CASE_ID_KEY, caseId.toString());
         stepCtx.putString(CTX_DOC_ID_KEY, docId.toString());
 
-        when(contribution.getStepExecution()).thenReturn(stepExecution);
-        when(stepExecution.getExecutionContext()).thenReturn(stepCtx);
-        when(stepExecution.getJobExecution()).thenReturn(mock(JobExecution.class));
-        ExecutionContext jobCtx = new ExecutionContext();
-        when(stepExecution.getJobExecution().getExecutionContext()).thenReturn(jobCtx);
-        jobCtx.put(CTX_UPLOAD_VERIFIED_KEY + ":" + docId, true);
+        final String verifiedKey = CTX_UPLOAD_VERIFIED_KEY + ":" + docId;
+        jobCtx.put(verifiedKey, true);
 
-        lenient().when(documentIdResolver.resolveExistingDocId(any(), any())).thenReturn(Optional.empty());
-        when(queryResolver.resolve()).thenReturn(Collections.emptyList());
+        final Query q = new Query();
+        q.setQueryId(queryId);
+        q.setLabel("Q1");
+        when(queryResolver.resolve()).thenReturn(List.of(q));
 
-        RepeatStatus status = newTasklet().execute(contribution, chunkContext);
+        when(jdbc.query(
+                eq("SELECT query_id FROM answer_reservations  WHERE case_id=:case_id AND doc_id=:doc_id AND status IN ('NEW','FAILED')"),
+                any(MapSqlParameterSource.class),
+                anyUuidRowMapper()
+        )).thenReturn(List.of(queryId));
 
+        when(jdbc.query(
+                eq("SELECT version FROM answer_reservations  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource.class),
+                anyIntRowMapper()
+        )).thenReturn(Collections.emptyList());
+
+        when(jdbc.queryForObject(
+                eq("SELECT get_or_create_answer_version(:case_id,:query_id,:doc_id)"),
+                any(MapSqlParameterSource.class),
+                eq(Integer.class)
+        )).thenReturn(1);
+
+        when(jdbc.update(
+                eq("UPDATE answer_reservations    SET status='IN_PROGRESS', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id    AND status IN ('NEW','FAILED')"),
+                any(MapSqlParameterSource.class)
+        )).thenReturn(1);
+
+        // Make API fail (empty body triggers IllegalStateException handling path in tasklet via RetryTemplate recovery)
+        when(documentInformationSummarisedApi.answerUserQuery(any(AnswerUserQueryRequest.class)))
+                .thenReturn(ResponseEntity.ok(null));
+
+        when(jdbc.batchUpdate(
+                eq("UPDATE answer_reservations SET status='FAILED', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource[].class)
+        )).thenReturn(new int[]{1});
+
+        final RepeatStatus status = tasklet.execute(contribution, chunkContext);
         assertThat(status).isEqualTo(RepeatStatus.FINISHED);
-        verifyNoInteractions(jdbc, qdlRepo, documentInformationSummarisedApi);
+
+        // Ensure FAILED path called; and no UPSERT executed
+        verify(jdbc, times(1)).batchUpdate(
+                eq("UPDATE answer_reservations SET status='FAILED', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource[].class)
+        );
     }
 
     @Test
-    @DisplayName("Overrides docId from DB when materialId present; uses resolved docId and updates context")
-    void overridesDocIdFromDbAndUpdatesContext() throws Exception {
+    @DisplayName("Single-query mode -> only that query is processed even if multiple are eligible")
+    void singleQueryModeFilters() {
         final UUID caseId = UUID.randomUUID();
-        final UUID oldDocId = UUID.randomUUID();
-        final UUID resolvedDocId = UUID.randomUUID();
-        final UUID materialId = UUID.randomUUID();
+        final UUID docId = UUID.randomUUID();
+        final UUID q1 = UUID.randomUUID();
+        final UUID q2 = UUID.randomUUID();
 
-        ExecutionContext stepCtx = new ExecutionContext();
         stepCtx.putString(CTX_CASE_ID_KEY, caseId.toString());
-        stepCtx.putString(CTX_DOC_ID_KEY, oldDocId.toString());
-        stepCtx.putString(CTX_MATERIAL_ID_KEY, materialId.toString());
+        stepCtx.putString(CTX_DOC_ID_KEY, docId.toString());
 
-        when(contribution.getStepExecution()).thenReturn(stepExecution);
-        when(stepExecution.getExecutionContext()).thenReturn(stepCtx);
-        when(stepExecution.getJobExecution()).thenReturn(mock(JobExecution.class));
-        ExecutionContext jobCtx = new ExecutionContext();
-        when(stepExecution.getJobExecution().getExecutionContext()).thenReturn(jobCtx);
+        final String verifiedKey = CTX_UPLOAD_VERIFIED_KEY + ":" + docId;
+        jobCtx.put(verifiedKey, true);
 
-        // Verified only for the RESOLVED docId
-        jobCtx.put(CTX_UPLOAD_VERIFIED_KEY + ":" + resolvedDocId, true);
+        final Query query1 = new Query();
+        query1.setQueryId(q1);
+        query1.setLabel("Q1");
+        final Query query2 = new Query();
+        query2.setQueryId(q2);
+        query2.setLabel("Q2");
+        when(queryResolver.resolve()).thenReturn(List.of(query1, query2));
 
-        when(documentIdResolver.resolveExistingDocId(eq(caseId), eq(materialId))).thenReturn(Optional.of(resolvedDocId));
+        // Eligible both from DB
+        when(jdbc.query(
+                eq("SELECT query_id FROM answer_reservations  WHERE case_id=:case_id AND doc_id=:doc_id AND status IN ('NEW','FAILED')"),
+                any(MapSqlParameterSource.class),
+                anyUuidRowMapper()
+        )).thenReturn(List.of(q1, q2));
 
-        // Provide a single query
-        UUID q1 = UUID.randomUUID();
-        Query query1 = mock(Query.class);
-        when(query1.getQueryId()).thenReturn(q1);
-        when(queryResolver.resolve()).thenReturn(List.of(query1));
+        // Provide single-query mode via job parameter
+        final JobParameters params = new JobParametersBuilder()
+                .addString("CTX_SINGLE_QUERY_ID", q2.toString())
+                .toJobParameters();
+        when(jobExecution.getJobParameters()).thenReturn(params);
 
-        // basic JDBC stubs
-        when(jdbc.query(anyString(), any(SqlParameterSource.class), ArgumentMatchers.<RowMapper<Integer>>any()))
-                .thenReturn(Collections.emptyList());
-        when(jdbc.queryForObject(startsWith("SELECT get_or_create_answer_version"), any(SqlParameterSource.class), eq(Integer.class)))
-                .thenReturn(1);
-        when(jdbc.update(startsWith("UPDATE answer_reservations SET status='IN_PROGRESS'"), any(SqlParameterSource.class)))
-                .thenReturn(1);
+        // Make IN_PROGRESS update succeed only once (for the chosen query)
+        when(jdbc.query(
+                eq("SELECT version FROM answer_reservations  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource.class),
+                anyIntRowMapper()
+        )).thenReturn(List.of(1));
 
-        var resp1 = new UserQueryAnswerReturnedSuccessfully().userQuery("").queryPrompt("").llmResponse("ans").chunkedEntries(List.of());
-        when(documentInformationSummarisedApi.answerUserQuery(any())).thenReturn(ResponseEntity.ok(resp1));
+        when(jdbc.update(
+                eq("UPDATE answer_reservations    SET status='IN_PROGRESS', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id    AND status IN ('NEW','FAILED')"),
+                any(MapSqlParameterSource.class)
+        )).thenReturn(1);
 
-        ArgumentCaptor<MapSqlParameterSource[]> answersBatchCaptor = ArgumentCaptor.forClass(MapSqlParameterSource[].class);
-        when(jdbc.batchUpdate(startsWith("INSERT INTO answers"), answersBatchCaptor.capture()))
-                .thenReturn(new int[]{1});
+        // qdl + API minimal stubs to let it proceed
+        when(qdlRepo.findByQueryId(any(UUID.class))).thenReturn(Optional.empty());
+        final UserQueryAnswerReturnedSuccessfully rag =
+                new UserQueryAnswerReturnedSuccessfully()
+                        .llmResponse("ok")
+                        .chunkedEntries(Collections.emptyList());
+        when(documentInformationSummarisedApi.answerUserQuery(any(AnswerUserQueryRequest.class)))
+                .thenReturn(ResponseEntity.ok(rag));
 
-        RepeatStatus status = newTasklet().execute(contribution, chunkContext);
+        when(jdbc.batchUpdate(
+                eq("INSERT INTO answers(case_id, query_id, version, created_at, answer, llm_input, doc_id) VALUES (:case_id, :query_id, :version, NOW(), :answer, :llm_input, :doc_id) ON CONFLICT (case_id, query_id, version) DO UPDATE SET   answer = EXCLUDED.answer,   llm_input = EXCLUDED.llm_input,   doc_id = EXCLUDED.doc_id,   created_at = EXCLUDED.created_at"),
+                any(MapSqlParameterSource[].class)
+        )).thenReturn(new int[]{1});
+
+        when(jdbc.batchUpdate(
+                eq("UPDATE answer_reservations SET status='DONE', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource[].class)
+        )).thenReturn(new int[]{1});
+
+        final RepeatStatus status = tasklet.execute(contribution, chunkContext);
         assertThat(status).isEqualTo(RepeatStatus.FINISHED);
 
-        // Context updated
-        assertThat(stepCtx.getString(CTX_DOC_ID_KEY)).isEqualTo(resolvedDocId.toString());
-
-        MapSqlParameterSource[] answersBatch = answersBatchCaptor.getValue();
-        assertThat(answersBatch).hasSize(1);
-        assertThat(answersBatch[0].getValues().get("doc_id")).isEqualTo(resolvedDocId);
-        assertThat(answersBatch[0].getValues().get("case_id")).isEqualTo(caseId);
+        // One UPSERT + one DONE batch should happen
+        verify(jdbc, times(1)).batchUpdate(
+                eq("INSERT INTO answers(case_id, query_id, version, created_at, answer, llm_input, doc_id) VALUES (:case_id, :query_id, :version, NOW(), :answer, :llm_input, :doc_id) ON CONFLICT (case_id, query_id, version) DO UPDATE SET   answer = EXCLUDED.answer,   llm_input = EXCLUDED.llm_input,   doc_id = EXCLUDED.doc_id,   created_at = EXCLUDED.created_at"),
+                any(MapSqlParameterSource[].class)
+        );
+        verify(jdbc, times(1)).batchUpdate(
+                eq("UPDATE answer_reservations SET status='DONE', updated_at=NOW()  WHERE case_id=:case_id AND query_id=:query_id AND doc_id=:doc_id"),
+                any(MapSqlParameterSource[].class)
+        );
     }
 
-    @Test
-    @DisplayName("Skips early when verified flag missing for resolved docId")
-    void skipsWhenVerifiedMissingForResolvedDoc() throws Exception {
-        final UUID caseId = UUID.randomUUID();
-        final UUID oldDocId = UUID.randomUUID();
-        final UUID resolvedDocId = UUID.randomUUID();
-        final UUID materialId = UUID.randomUUID();
+    // ---------- helpers ----------
 
-        ExecutionContext stepCtx = new ExecutionContext();
-        stepCtx.putString(CTX_CASE_ID_KEY, caseId.toString());
-        stepCtx.putString(CTX_DOC_ID_KEY, oldDocId.toString());
-        stepCtx.putString(CTX_MATERIAL_ID_KEY, materialId.toString());
+    private static class NoopTxManager implements PlatformTransactionManager {
+        @Override
+        public TransactionStatus getTransaction(final TransactionDefinition definition) {
+            return new SimpleTransactionStatus();
+        }
+        @Override
+        public void commit(final TransactionStatus status) { }
+        @Override
+        public void rollback(final TransactionStatus status) { }
+    }
 
-        when(contribution.getStepExecution()).thenReturn(stepExecution);
-        when(stepExecution.getExecutionContext()).thenReturn(stepCtx);
-        when(stepExecution.getJobExecution()).thenReturn(mock(JobExecution.class));
-        ExecutionContext jobCtx = new ExecutionContext();
-        when(stepExecution.getJobExecution().getExecutionContext()).thenReturn(jobCtx);
+    /**
+     * Typed matcher to avoid rawtype warnings with -Werror.
+     */
+    private static RowMapper<UUID> anyUuidRowMapper() {
+        return org.mockito.ArgumentMatchers.<RowMapper<UUID>>any();
+    }
 
-        when(documentIdResolver.resolveExistingDocId(eq(caseId), eq(materialId))).thenReturn(Optional.of(resolvedDocId));
-
-        // NOTE: do NOT set verified for resolvedDocId
-
-        RepeatStatus status = newTasklet().execute(contribution, chunkContext);
-        assertThat(status).isEqualTo(RepeatStatus.FINISHED);
-
-        verifyNoInteractions(jdbc, qdlRepo, documentInformationSummarisedApi);
+    /**
+     * Typed matcher to avoid rawtype warnings with -Werror.
+     */
+    private static RowMapper<Integer> anyIntRowMapper() {
+        return org.mockito.ArgumentMatchers.<RowMapper<Integer>>any();
     }
 }
